# wagtail-blog

./: .dockerignore  .gitignore  .travis.yml  CHANGELOG.md  Dockerfile  README.md  Untitled.ipynb  cmdp  django-shell-plus.ipynb  manage.py  p10k.zsh  pyproject.toml  requirements.txt  zappa_settings.json
.devcontainer/: devcontainer.json
airflow/dags/: hello_word.py  test_dag_complex.py  test_dag_django.py  test_dag_scheduler.py
airflow/dags/base/: django_operator.py
ansible/: README.md  ansible.cfg  config-project.yml
ansible/group_vars/all/: vars.yml
ansible/group_vars/develop/: vars.yml  vault.yml
ansible/group_vars/production/: vars.yml  vault.yml
ansible/group_vars/qa/: vars.yml  vault.yml
ansible/roles/ansible-role-django/tasks/: main.yml
ansible/roles/ansible-role-django/templates/: airflow-queue.j2  airflow-scheduler.j2  airflow-server.j2  airflow-worker.j2  airflow.cfg.j2  cmdp.j2  django-messages.j2  django-migrate.j2  django.supervisor.conf.j2  django_start.j2  django_websocket_start.j2  nginx.conf.j2  zappa_settings.json.j2
aws/policys/: LambdaRolePolicy.json  LambdaUserPolicy.json  ZappaRolePolicy.json  ZappaUserGeneralPolicy.json  ZappaUserS3Policy.json
blog/: api.py  middleware.py  models.py  routing.py  views.py
blog/consumers/: __init__.py  blog_consumers.py
blog/migrations/: 0001_initial.py  0002_contactpage_formfield.py  0003_formfield_clean_name.py
blog/models/: __init__.py  blogspage.py  contactpage.py  perfilpage.py
blog/msgs/: __init__.py
blog/msgs/info/: __init__.py
client/: index.html
config/: asgi.py  core_settings.py  routing.py  settings.py  urls.py  wsgi.py
config/debug/: asgi.py  routing.py  settings.py  wsgi.py
config/settings/: base.py  local.py  production.py
fixtures/: data.json  dumpdata.sh
locale/en/LC_MESSAGES/: django.mo
locale/es/LC_MESSAGES/: django.mo
templates/: base.html
templates/contact/: contact_page.html  contact_page_landing.html
