[tool.poetry]
description = "Imagen de Django 2.2.13 con Nginx y Apache Airflow."
name = "wagtail-blog"
version = "0.1.0"

license = "Apache-2.0"

authors = [
  "Saúl Galán <saengate@gmail.com>",
]

readme = 'README.md' # Markdown files are supported

homepage = "https://github.com/saengate/wagtail-blog"
repository = "https://github.com/saengate/wagtail-blog"

keywords = ['packaging', 'poetry']

[tool.poetry.dependencies]
# https://python-poetry.org/docs/dependency-specification/
Django = "^3.0"
apache-airflow = {version = "^1.10", extras = ["postgres", "celery", "redis", "crypto"]}
asgiref = "^3.2"
autopep8 = "^1.5"
celery = "^4.4"
channels = "^2.4"
channels-redis = "^3.0"
daphne = "^2.5"
django-cors-headers = "^3.4"
django-easy-audit = "^1.2"
django-watchman = "^0.18"
django_neomodel = "*"
djangorestframework = "^3.10"
djangotoolbox = "^1.8"
flake8 = "^3.8"
flake8-commas = "^2.0"
gevent = "^1.4"
gunicorn = "^19.10"
nose = "^1.3"
pandas = "^1.0"
psycopg2 = "^2.8"
python = "~3.7"
python-dateutil = "^2.8"
redis = "^3.2"
requests = "^2.22"
termcolor = "^1.1"
unittest-tap-reporting = "^0.2"
unittest-xml-reporting = "^2.5"
urllib3 = "^1.25"
wagtail = "^2.9."
