[tool.poetry]
description = "Imagen de Django 2.2.13 con Nginx y Apache Airflow."
name = "wagtail-blog"
version = "0.1.0"

license = "Apache-2.0"

authors = [
  "Saúl Galán <saengate@gmail.com>",
]

readme = 'README.md' # Markdown files are supported

homepage = "https://github.com/saengate/wagtail-blog"
repository = "https://github.com/saengate/wagtail-blog"

keywords = ['packaging', 'poetry']

[tool.poetry.dependencies]
# https://python-poetry.org/docs/dependency-specification/
Django = "^3.0"
Pillow = "^7.2"
apache-airflow = {version = "^1.10", extras = ["postgres", "celery", "redis", "crypto"]}
asgiref = "^3.2"
celery = "^4.4"
channels = "^2.4"
channels-redis = "^3.0"
daphne = "^2.5"
django-cors-headers = "^3.5"
django-easy-audit = "^1.3.0a"
django-extensions = "^3.0"
django-redis = "^4.12"
django-rest-auth = "^0.9"
django-watchman = "^0.18"
django_neomodel = "*"
djangorestframework = "^3.10"
djangotoolbox = "^1.8"
gevent = "^1.4"
gunicorn = "^19.10"
nose = "^1.3"
pandas = "^1.0"
psycopg2 = "^2.8"
python = "~3.7"
python-dateutil = "^2.8"
redis = "^3.2"
requests = "^2.22"
termcolor = "^1.1"
urllib3 = "^1.25"
wagtail = "^2.10"
wagtail-cache = "^1.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5"
flake8 = "^3.8"
flake8-commas = "^2.0"
ipykernel = "^5.3"
ipython = "^7.17"
ipywidgets = "^7.5"
jedi = "^0.17"
jupyter = "^1.0"
jupyter-client = "^6.1"
jupyter-console = "^6.1"
jupyter-core = "^4.6"
notebook = "^6.1"
qtconsole = "^4.7"
widgetsnbextension = "^3.5"
